# atlas

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  conan_provider.cmake  conandata.yml  settings.gradle.kts  vcpkg.json
benchmark/: CMakeLists.txt
benchmark/src/: bm_string.cpp
build-logic/: build.gradle.kts  settings.gradle.kts
cmake/: atlas_build_target.cmake  conan_provider.cmake  detect_arch.cmake  detect_platform.cmake  import_asan.cmake  pre_check.cmake
examples/: CMakeLists.txt
examples/empty_project/: CMakeLists.txt
examples/empty_project/src/: empty_project_module.cpp  empty_project_module.hpp
examples/gallery/: CMakeLists.txt  gallery.project.json
examples/gallery/src/: gallery_module.cpp  gallery_module.hpp
misc/debug_visualization/: engine.natvis
misc/schema/: project.json
save/config/: engine_config.toml
src/: CMakeLists.txt
src/application/: CMakeLists.txt
src/application/include/: application_implement.hpp  application_log.hpp  application_module.hpp  application_window.hpp  platform_application.hpp
src/application/src/: application_module.cpp  platform_application.cpp
src/core/: CMakeLists.txt
src/core/include/: assertion.hpp  check.hpp  core_def.hpp  core_log.hpp  core_macro.hpp
src/core/include/async/: schedule_on.hpp  static_thread_pool.hpp  task.hpp  thread.hpp
src/core/include/concurrency/: lock_free_list.hpp  priority_queue.hpp
src/core/include/configuration/: config_manager.hpp  config_variable.hpp
src/core/include/container/: array.hpp  flat_tree.hpp  map.hpp  set.hpp  unordered_map.hpp  unordered_set.hpp
src/core/include/file_system/: directory.hpp  path.hpp
src/core/include/io/: filesystem_io_backend.hpp  io_backend_interface.hpp  io_types.hpp  llio.hpp
src/core/include/log/: logger.hpp
src/core/include/math/: atlas_math.hpp  city_hash.hpp  rect.hpp
src/core/include/memory/: allocator.hpp  c_malloc.hpp  malloc_base.hpp  malloc_interface.hpp  memory.hpp  override_new_delete.hpp  standard_malloc.hpp  system_new_delete_object.hpp
src/core/include/meta/: class.hpp  constructor.hpp  meta_types.hpp  method.hpp  property.hpp  registration.hpp
src/core/include/misc/: cmd_options.hpp  delegate.hpp  delegate_fwd.hpp  iterator.hpp  on_scope_exit.hpp  scope_guard.hpp  stop_token.hpp
src/core/include/module/: module_interface.hpp  module_manager.hpp
src/core/include/platform/: generic_platform_traits.hpp  platform_fwd.hpp
src/core/include/platform/mac/: mac_memory.hpp  mac_platform.hpp  mac_platform_traits.hpp
src/core/include/platform/windows/: windows_memory.hpp  windows_minimal_api.hpp  windows_platform.hpp  windows_platform_traits.hpp
src/core/include/serialize/: binary_archive.hpp  compact_binary_archive.hpp  json_archive.hpp  stream.hpp
src/core/include/string/: locale.hpp  string.hpp  string_name.hpp  string_name_pool.hpp  string_utility.hpp  unicode.hpp
src/core/include/utility/: algorithm.hpp  call_traits.hpp  cmd_options.hpp  compression_pair.hpp  concepts.hpp  delegate.hpp  delegate_fwd.hpp  guid.hpp  iterator.hpp  json.hpp  on_scope_exit.hpp  stop_token.hpp  stream.hpp  toml.hpp  untyped_data.hpp
src/core/src/concurrency/: lock_free_list.cpp
src/core/src/configuration/: config_manager.cpp
src/core/src/file_system/: directory.cpp
src/core/src/io/: filesystem_io_backend.cpp  llio.cpp
src/core/src/log/: logger.cpp
src/core/src/math/: atlas_math.cpp  city_hash.cpp
src/core/src/memory/: c_malloc.cpp  memory.cpp  override_new_delete.cpp  standard_malloc.cpp  system_new_delete_object.cpp
src/core/src/meta/: class.cpp  property.cpp  registration.cpp
src/core/src/misc/: cmd_options.cpp
src/core/src/module/: module_manager.cpp
src/core/src/platform/: generic_platform_traits.cpp
src/core/src/platform/mac/: mac_memory.cpp  mac_platform_traits.cpp
src/core/src/platform/windows/: windows_memory.cpp  windows_platform_traits.cpp
src/core/src/serialize/: binary_archive.cpp  compact_binary_archive.cpp  json_archive.cpp
src/core/src/string/: locale.cpp  string.cpp  string_name.cpp
src/core/src/utility/: guid.cpp
src/editor/: CMakeLists.txt
src/editor/include/: asset_importer_interface.hpp  editor_engine.hpp  editor_log.hpp
src/editor/src/: editor_engine.cpp
src/engine/: CMakeLists.txt
src/engine/include/: engine.hpp  engine_log.hpp  game_engine.hpp  plugin_manager.hpp  project.hpp
src/engine/src/: engine.cpp  game_engine.cpp  plugin_manager.cpp  project.cpp
src/launcher/: CMakeLists.txt
src/launcher/src/: engine_main.cpp  engine_main.hpp  main.cpp
src/launcher/src/mac/: main.mm
src/launcher/src/windows/: main.cpp
src/renderer/: CMakeLists.txt
src/renderer/include/: renderer_module.hpp
src/renderer/src/: renderer_module.cpp
src/rhi/: CMakeLists.txt
src/rhi/include/: rhi.hpp  rhi_backend.hpp  rhi_error_code.hpp  rhi_log.hpp  rhi_module.hpp  rhi_types.hpp
src/rhi/include/opengl/: opengl_context.hpp  opengl_functions.hpp  opengl_types.hpp  platform_gl_context.hpp  platform_gl_implementation.hpp  rhi_backend_opengl.hpp  surface_format.hpp
src/rhi/include/opengl/details/: platform_gl_interface.hpp
src/rhi/include/opengl/platform/windows/: windows_gl_context.hpp  windows_gl_implementation.hpp
src/rhi/src/: rhi.cpp  rhi_module.cpp
src/rhi/src/opengl/: opengl_context.cpp  opengl_functions.cpp
src/rhi/src/opengl/platform/windows/: windows_gl_context.cpp
test/: CMakeLists.txt
test/test_core/: CMakeLists.txt
test/test_core/src/: array_test.cpp  (+18 more)
test/test_engine/: CMakeLists.txt
tools/: atlas_tools.sln
tools/AtlasBuildTool/: AtlasBuildTool.cs  AtlasBuildTool.csproj
tools/AtlasBuilder/: AtlasBuilder.cs  AtlasBuilder.csproj  BuildCommand.cs  PackageManagerType.cs
tools/CppAst/: CppAst.csproj  CppClass.cs  CppEnum.cs  CppEnumItem.cs  CppField.cs  CppFunction.cs  CppGlobalDeclarationContainer.cs  CppModelBuilder.cs  CppNamespace.cs  CppParser.cs  CppParserOptions.cs  CppTypedef.cs  ICppAttributeContainer.cs
tools/ToolCore/: ToolCore.csproj
tools/atlas_builder/: build.gradle.kts
tools/tool_core/: build.gradle.kts
(+89 files in other folders)
